log
Tue 26 Sep 2023 12:57:01 AM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
11d2111
Tue 26 Sep 2023 01:04:44 AM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
12198b5
Tue 26 Sep 2023 01:27:09 AM UTC: 
 heap.c | 35 ++++++++++++++++++++++++++++++++++-
 1 file changed, 34 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:38:46: error: comparison between pointer and integer [-Werror]
   38 |   if (pq == NULL || data == NULL || priority == NULL){
      |                                              ^~
cc1: all warnings being treated as errors
Compilation failed
930cd81
Tue 26 Sep 2023 01:27:41 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
e4f0c75
Tue 26 Sep 2023 01:30:13 AM UTC: 
 heap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:57:13: error: unused variable ‘temp’ [-Werror=unused-variable]
   57 |   heapElem* temp;
      |             ^~~~
cc1: all warnings being treated as errors
Compilation failed
6fee66a
Tue 26 Sep 2023 01:30:25 AM UTC: 
 heap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  2|2
total_score: 20/70
9dbbfa5
Tue 26 Sep 2023 01:31:12 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
999f85c
